# Savely

./: .gitignore  CMakeLists.txt  CMakeLists.txt.qtds  README.md  qml.qrc
.github/workflows/: cmake-single-platform.yml
cmake/: GenQmlCrc.cmake  QmlScanner.cmake
src/: main.cpp  mainwindow.cpp
src/include/: mainwindow.h
